--- a/css/main.css
+++ b/css/main.css
@@ -18,34 +18,102 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
+
+header {
+  background-color: #18294f;
+}
+
+h1 {
+  color: #fff;
+  font-size: 2rem;
+  margin: 0;
+  padding-top: .75rem;
+  text-align: center;
+}
+
+ul {
+  float; left;
+  margin: 0;
+  padding: .5em .75em;
+}
+
+li {
+  font-size: 1.125rem;
+  margin: .9rem;
+  list-style-type: none;
+}
+
+a {
+  color: #6c8fe0;
+  text-decoration: none;
+}
+
 @media only screen and (min-width: 25em) {
 
   html {
     font-size: 100%;
     line-height: 1.3;
   }
+
+  nav {
+    display: inline-block;
+    text-align: center;
+    padding-top: 5px;
+    width: 100%;
+  }
+
+  nav li {
+    float: left;
+    margin: 0;
+    padding: .3em 0 .5em;
+    width: 50%;
+  }
 }
 
 @media only screen and (min-width: 38em) {
 
   html {
-    font-size: 100%;
-    line-height: 1.3;
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  nav li {
+    float: left;
+    margin: 0;
+    padding: .5em 0 .5em;
+    width: 25%;
   }
 }
 
 @media only screen and (min-width: 60em) {
 
   html {
-    font-size: 100%;
-    line-height: 1.3;
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  h1 {
+    background-color: #18294f;
+    display: inline-block;
+    float: left;
+    padding-top: .275em;
+    width: 33%;
+  }
+
+  nav {
+    background-color: #18294f;
+    display: inline-block;
+    float: left;
+    width: 66.67%;
   }
 }
 
 @media only screen and (min-width: 90em) {
 
   html {
-    font-size: 100%;
-    line-height: 1.3;
+    font-size: 130%;
   }
 }
