--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ html {
   text-size-adjust: 100%;
   font: normal 100%/1.3 serif;
   font-family: 'Ubuntu', sans-serif;
+  overflow: hidden;
 }
 
 *, *::before, *::after {
@@ -35,20 +36,28 @@ h1 {
 }
 
 ul {
-  float; left;
   margin: 0;
   padding: .5em .75em;
 }
 
 li {
   font-size: 1.125rem;
-  margin: .9rem;
+  margin: 0;
   list-style-type: none;
+  width: 100%;
 }
 
-a {
+li a {
   color: #6c8fe0;
+  display: block;
+  float: none;
   text-decoration: none;
+  width: 100%;
+}
+
+li a:hover {
+  color: #fff;
+  background-color: #6c8fe0;
 }
 
 @media only screen and (min-width: 25em) {
@@ -100,14 +109,14 @@ a {
     display: inline-block;
     float: left;
     padding-top: .275em;
-    width: 33%;
+    width: 33.3333%;
   }
 
   nav {
     background-color: #18294f;
     display: inline-block;
-    float: left;
-    width: 66.67%;
+    float: right;
+    width: 66.6666%;
   }
 }
 
