--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font: normal 100%/1.3 serif;
-  font-family: 'Ubuntu', sans-serif;
+  font: normal 100%/1.3 sans-serif;
+  font-family: Ubuntu, sans-serif;
   overflow: hidden;
 }
 
@@ -25,9 +25,10 @@ body {
 
 header {
   background-color: #18294f;
+  color: #fff;
 }
 
-h1 {
+header h1 {
   color: #fff;
   font-size: 2rem;
   margin: 0;
@@ -35,7 +36,7 @@ h1 {
   text-align: center;
 }
 
-ul {
+nav ul {
   margin: 0;
   padding: .5em .75em;
 }
@@ -47,15 +48,16 @@ li {
   width: 100%;
 }
 
-li a {
+nav a {
   color: #6c8fe0;
   display: block;
   float: none;
+  padding: .75rem;
   text-decoration: none;
   width: 100%;
 }
 
-li a:hover {
+nav a:hover {
   color: #fff;
   background-color: #6c8fe0;
 }
@@ -92,7 +94,7 @@ li a:hover {
   nav li {
     float: left;
     margin: 0;
-    padding: .5em 0 .5em;
+    padding: .5em 0;
     width: 25%;
   }
 }
