--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font: normal 100%/1.3 sans-serif;
   font-family: Ubuntu, sans-serif;
   overflow: hidden;
 }
@@ -37,12 +36,12 @@ header h1 {
 }
 
 nav ul {
+  font-size: 1.125rem;
   margin: 0;
   padding: .5em .75em;
 }
 
 li {
-  font-size: 1.125rem;
   margin: 0;
   list-style-type: none;
   width: 100%;
@@ -52,8 +51,9 @@ nav a {
   color: #6c8fe0;
   display: block;
   float: none;
-  padding: .75rem;
+  padding: .5rem;
   text-decoration: none;
+  white-space: normal;
   width: 100%;
 }
 
