--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,13 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-  box-sizing: border-box;
+  font: normal 100%/1.3 Ubuntu, sans-serif;
+  font-family: Ubuntu, sans-serif;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font: normal 100%/1.5 sans-serif;
-  font-family: Ubuntu, sans-serif;
+  box-sizing: border-box;
   overflow: hidden;
 }
 
